--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "main": "./src/main.ts",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "postinstall": "patch-package"
+  },
   "dependencies": {
     "@angular/animations": "~19.0.0",
     "@angular/common": "~19.0.0",
@@ -14,16 +17,24 @@
     "@angular/router": "~19.0.0",
     "@nativescript/angular": "^19.0.0",
     "@nativescript/core": "~8.8.0",
+    "@open-native/core": "^2.0.4",
+    "react-native-razorpay": "^2.3.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.0.0",
     "@angular/compiler-cli": "~19.0.0",
+    "@nativescript/android": "8.9.0-dev.0",
+    "@nativescript/ios": "8.8.2",
     "@nativescript/tailwind": "^2.1.0",
     "@nativescript/types": "~8.8.0",
     "@nativescript/webpack": "~5.0.0",
     "@ngtools/webpack": "~19.0.0",
+    "@types/react-native-razorpay": "^2.2.6",
+    "glob": "^10.0.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "patch-package": "^8.0.0",
     "tailwindcss": "~3.4.0",
     "typescript": "~5.6.0"
   }
